fix (products): fix transalte Æwhen create products